contactmail send check

--- a/.env
+++ b/.env
@@ -31,16 +31,16 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+
 MAIL_MAILER=smtp
-MAIL_HOST=mail.auraclap.com
+#MAIL_HOST=smtpout.secureserver.net
+MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-mail_username=info@auraclap.com
-MAIL_PASSWORD=tQ84fVPbX~V%
+MAIL_USERNAME=info@mubryx.com
+MAIL_PASSWORD=ilucrpptqnkwuwmw
 MAIL_ENCRYPTION=tls
-mail_from_address=info@auraclap.com
-MAIL_FROM_NAME="${APP_NAME}"
-
-
+MAIL_FROM_ADDRESS=info@mubryx.com
+MAIL_FROM_NAME="Mubryx"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
